cros: fix not able to open search result context menu

A typo fix

Bug: 839252
Test: tested on device
Change-Id: Ic56d3324212b23d23d6782bc082e3765f996eedd
Reviewed-on: https://chromium-review.googlesource.com/1043396
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Qiang Xu <warx@google.com>
Cr-Commit-Position: refs/heads/master@{#556071}
Former-commit-id: 69feef31581454d944dae3970505209ef6b6563b